--- a/app/src/main/res/layout/activity_man2.xml
+++ b/app/src/main/res/layout/activity_man2.xml
@@ -20,8 +20,8 @@
 
     <TextView
         android:id="@+id/textTen"
-        android:layout_width="97dp"
-        android:layout_height="32dp"
+        android:layout_width="232dp"
+        android:layout_height="42dp"
         android:layout_marginTop="124dp"
         android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
@@ -34,7 +34,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
-        android:text="TextView"
+        android:text="Hihi"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
